2010-07-15  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: Make sure we always walk new layers for loaded
	  handlers to ensure our warning popups vanish.

2010-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (OnCollectionChanged): If the collection
	that changed was not the subimages property, then chain up
	immediately. Fixes some bugs introduced yesterday and should also
	help with performance since we don't need to re-sort the subimages
	unnecessarily.

2010-07-15  David Reveman  <davidr@novell.com>

	* effect.h: Composite and UpdateShader should be protected.

	* uielement.cpp (PostRender):
	* effect.h:
	* effect.cpp: Rename Effect::ClipAndComposite to Effect::Render.

	* effect.cpp: Composite now takes a pipe_surface_t and
	pipe_resource_t instead of two cairo surfaces.
	Call MaybeUpdateShader outside Composite.

	* uielement.cpp (PostRender):
	* effect.h:
	* effect.cpp: Add projection parameters to Effect::Composite
	interface.

	* effect.h:
	* effect.cpp: Remove blend_enable argument from
	DrawVertexBuffer function and remove unnecessary framebuffer
	state changes.
	Move scissor and rasterizer state changes into
        DrawVertexBuffer.
	Move viewport state changes into DrawVertexBuffer.

	* effect.cpp: Major cleanup by using GL rasterization rules
	and adding CreateVertexBuffer.
	Rename DrawVertices to DrawVertexBuffer.

	* effect.cpp (Composite): Use VIEWPORT_SCALE.

	* projection.h:
	* projection.cpp: Move VIEWPORT_SCALE into projection.h.

	* effect.h:
	* effect.cpp: Add missing const modifier.
	Remove nattrib argument from DrawVertices.
	Remove nattrib argument from GetShaderVertexBuffer.

2010-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* glyphs.cpp: Add a null check. Fixes a crash with #txd74.

2010-07-15  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: Ensure that we only emit loaded events for the
	  root element after we emit the loaded event for the surface.
