@@ -1,3 +1,9 @@
+2010-07-16  Alan McGovern  <amcgovern@novell.com>
+
+	* template.h:
+	* validators.cpp: Validate ControlTemplate::TargetType to make
+	  drt 349 a bit happier.
+
 2010-07-15  Alan McGovern  <amcgovern@novell.com>
 
 	* runtime.cpp: Make sure we always walk new layers for loaded
